Update CONTRIBUTING.md related to Jaco-s findings